@@ -1,12 +1,14 @@
 /* $Id$ */
 
+/**
+ * Styles for the feedback form.
+ */
 /* Reset commonly set styles */
 #block-feedback-form,
 #block-feedback-form .feedback-link,
 #block-feedback-form .feedback-link *,
 #block-feedback-form .content,
-#block-feedback-form form,
-#block-feedback-form form label {
+#block-feedback-form form {
   float: none;
   margin: 0;
   padding: 0;
@@ -15,7 +17,6 @@
   font-weight: normal;
   color: inherit;
 }
-
 
 #block-feedback-form {
   display: none;
@@ -43,31 +44,30 @@
   padding: 6px;
   background-color: #fff;
   opacity: 0.9;
-  max-width: 220px;
+  max-width: 300px;
 }
 /* IE6 doesn't support max-width. */
 * html #block-feedback-form form {
-  width: 220px;
+  width: 300px;
 }
 #block-feedback-form .feedback-help {
   margin: 0 0 0.5em;
   font-size: 10px;
   line-height: normal;
 }
-#block-feedback-form .feedback-submitted {
-  margin-top: 0.2em;
-  font-size: 10px;
-}
 #block-feedback-form .feedback-message {
   height: 10ex;
 }
-#block-feedback-form #feedback-throbber {
-  height: 20px;
+#block-feedback-form .ajax-progress .throbber {
+  background: transparent url(images/throbber.gif) no-repeat left center;
+  height: 16px;
+  width: 16px;
 }
-#block-feedback-form .throbbing {
-  background: url(images/throbber.gif) no-repeat left center;
-}
-#block-feedback-form #feedback-submit {
-  background-color: #fff;
-  margin: 0;
+
+/**
+ * Styles for existing feedback messages.
+ */
+#block-feedback-form .feedback-submitted {
+  margin-top: 0.2em;
+  font-size: 10px;
 }
